src/output/MonitorParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /homes/rn710/workspace/MonitorPrototype/src/Monitor.g 2011-11-17 17:27:38

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class MonitorParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "INTERACTION", "PLUS", "MINUS", "MULT", "DIV", "FULLSTOP", "RESV", "SEND", "BRANCH", "UNORDERED", "RECLABEL", "ANNOTATION", "ID", "StringLiteral", "NUMBER", "DIGIT", "WHITESPACE", "ML_COMMENT", "LINE_COMMENT", "'import'", "'protocol'", "','", "';'", "'from'", "'as'", "'at'", "'{'", "'}'", "'('", "')'", "'role'", "'introduces'", "'to'", "'choice'", "'or'", "':'", "'repeat'", "'rec'", "'end'", "'run'", "'inline'", "'parallel'", "'and'", "'do'", "'interrupt'", "'unordered'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int RESV=10;
    public static final int T__23=23;
    public static final int ANNOTATION=15;
    public static final int ID=16;
    public static final int EOF=-1;
    public static final int ML_COMMENT=21;
    public static final int INTERACTION=4;
    public static final int FULLSTOP=9;
    public static final int PLUS=5;
    public static final int SEND=11;
    public static final int DIGIT=19;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int LINE_COMMENT=22;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int RECLABEL=14;
    public static final int NUMBER=18;
    public static final int WHITESPACE=20;
    public static final int MINUS=6;
    public static final int MULT=7;
    public static final int UNORDERED=13;
    public static final int StringLiteral=17;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int BRANCH=12;
    public static final int DIV=8;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "synpred29_Monitor", "synpred21_Monitor", "introducesDef", 
        "synpred23_Monitor", "importProtocolDef", "synpred48_Monitor", "simpleName", 
        "synpred17_Monitor", "parameterDefs", "synpred30_Monitor", "synpred10_Monitor", 
        "synpred27_Monitor", "synpred33_Monitor", "inlineDef", "synpred52_Monitor", 
        "recursionDef", "unorderedDef", "synpred28_Monitor", "dataTypeDef", 
        "synpred35_Monitor", "synpred20_Monitor", "synpred55_Monitor", "synpred47_Monitor", 
        "runDef", "parameterDef", "synpred53_Monitor", "activityDef", "choiceDef", 
        "typeReferenceDef", "activityList", "synpred22_Monitor", "blockDef", 
        "factor", "recBlockDef", "synpred24_Monitor", "synpred51_Monitor", 
        "interruptDef", "protocolRefDef", "description", "synpred49_Monitor", 
        "repeatDef", "importTypeStatement", "synpred11_Monitor", "synpred1_Monitor", 
        "synpred15_Monitor", "expr", "synpred13_Monitor", "interactionSignatureDef", 
        "synpred7_Monitor", "protocolBlockDef", "synpred41_Monitor", "globalEscapeDef", 
        "synpred42_Monitor", "synpred39_Monitor", "endDef", "synpred16_Monitor", 
        "synpred32_Monitor", "synpred46_Monitor", "parallelDef", "declarationName", 
        "synpred9_Monitor", "roleDef", "synpred26_Monitor", "synpred44_Monitor", 
        "term", "protocolDef", "synpred34_Monitor", "synpred38_Monitor", 
        "synpred4_Monitor", "synpred5_Monitor", "synpred50_Monitor", "synpred31_Monitor", 
        "synpred40_Monitor", "synpred6_Monitor", "synpred3_Monitor", "synpred36_Monitor", 
        "directedChoiceDef", "synpred45_Monitor", "roleName", "synpred54_Monitor", 
        "importTypeDef", "synpred18_Monitor", "synpred19_Monitor", "synpred43_Monitor", 
        "parameter", "importProtocolStatement", "synpred14_Monitor", "synpred25_Monitor", 
        "synpred2_Monitor", "synpred12_Monitor", "synpred37_Monitor", "activityListDef", 
        "labelName", "interactionDef", "onMessageDef", "protocolName", "synpred8_Monitor"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public MonitorParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public MonitorParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public MonitorParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return MonitorParser.tokenNames; }
    public String getGrammarFileName() { return "/homes/rn710/workspace/MonitorPrototype/src/Monitor.g"; }


    public static class description_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "description"
    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:1: description : ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef -> protocolDef ;
    public final MonitorParser.description_return description() throws RecognitionException {
        MonitorParser.description_return retval = new MonitorParser.description_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ANNOTATION1=null;
        Token ANNOTATION4=null;
        MonitorParser.importProtocolStatement_return importProtocolStatement2 = null;

        MonitorParser.importTypeStatement_return importTypeStatement3 = null;

        MonitorParser.protocolDef_return protocolDef5 = null;


        Object ANNOTATION1_tree=null;
        Object ANNOTATION4_tree=null;
        RewriteRuleTokenStream stream_ANNOTATION=new RewriteRuleTokenStream(adaptor,"token ANNOTATION");
        RewriteRuleSubtreeStream stream_importTypeStatement=new RewriteRuleSubtreeStream(adaptor,"rule importTypeStatement");
        RewriteRuleSubtreeStream stream_protocolDef=new RewriteRuleSubtreeStream(adaptor,"rule protocolDef");
        RewriteRuleSubtreeStream stream_importProtocolStatement=new RewriteRuleSubtreeStream(adaptor,"rule importProtocolStatement");
        try { dbg.enterRule(getGrammarFileName(), "description");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(27, 1);

        try {
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:12: ( ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef -> protocolDef )
            dbg.enterAlt(1);

            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:14: ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )* ( ANNOTATION )* protocolDef
            {
            dbg.location(27,14);
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:14: ( ( ANNOTATION )* ( importProtocolStatement | importTypeStatement ) )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3);

                try {
                    isCyclicDecision = true;
                    alt3 = dfa3.predict(input);
                }
                catch (NoViableAltException nvae) {
                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:16: ( ANNOTATION )* ( importProtocolStatement | importTypeStatement )
            	    {
            	    dbg.location(27,16);
            	    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:16: ( ANNOTATION )*
            	    try { dbg.enterSubRule(1);

            	    loop1:
            	    do {
            	        int alt1=2;
            	        try { dbg.enterDecision(1);

            	        int LA1_0 = input.LA(1);

            	        if ( (LA1_0==ANNOTATION) ) {
            	            alt1=1;
            	        }


            	        } finally {dbg.exitDecision(1);}

            	        switch (alt1) {
            	    	case 1 :
            	    	    dbg.enterAlt(1);

            	    	    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:18: ANNOTATION
            	    	    {
            	    	    dbg.location(27,18);
            	    	    ANNOTATION1=(Token)match(input,ANNOTATION,FOLLOW_ANNOTATION_in_description146); if (state.failed) return retval; 
            	    	    if ( state.backtracking==0 ) stream_ANNOTATION.add(ANNOTATION1);


            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop1;
            	        }
            	    } while (true);
            	    } finally {dbg.exitSubRule(1);}

            	    dbg.location(27,32);
            	    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:32: ( importProtocolStatement | importTypeStatement )
            	    int alt2=2;
            	    try { dbg.enterSubRule(2);
            	    try { dbg.enterDecision(2);

            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0==23) ) {
            	        int LA2_1 = input.LA(2);

            	        if ( (LA2_1==24) ) {
            	            alt2=1;
            	        }
            	        else if ( ((LA2_1>=ID && LA2_1<=StringLiteral)) ) {
            	            alt2=2;
            	        }
            	        else {
            	            if (state.backtracking>0) {state.failed=true; return retval;}
            	            NoViableAltException nvae =
            	                new NoViableAltException("", 2, 1, input);

            	            dbg.recognitionException(nvae);
            	            throw nvae;
            	        }
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return retval;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 2, 0, input);

            	        dbg.recognitionException(nvae);
            	        throw nvae;
            	    }
            	    } finally {dbg.exitDecision(2);}

            	    switch (alt2) {
            	        case 1 :
            	            dbg.enterAlt(1);

            	            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:34: importProtocolStatement
            	            {
            	            dbg.location(27,34);
            	            pushFollow(FOLLOW_importProtocolStatement_in_description153);
            	            importProtocolStatement2=importProtocolStatement();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) stream_importProtocolStatement.add(importProtocolStatement2.getTree());

            	            }
            	            break;
            	        case 2 :
            	            dbg.enterAlt(2);

            	            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:60: importTypeStatement
            	            {
            	            dbg.location(27,60);
            	            pushFollow(FOLLOW_importTypeStatement_in_description157);
            	            importTypeStatement3=importTypeStatement();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) stream_importTypeStatement.add(importTypeStatement3.getTree());

            	            }
            	            break;

            	    }
            	    } finally {dbg.exitSubRule(2);}


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}

            dbg.location(27,85);
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:85: ( ANNOTATION )*
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4);

                int LA4_0 = input.LA(1);

                if ( (LA4_0==ANNOTATION) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:27:87: ANNOTATION
            	    {
            	    dbg.location(27,87);
            	    ANNOTATION4=(Token)match(input,ANNOTATION,FOLLOW_ANNOTATION_in_description166); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_ANNOTATION.add(ANNOTATION4);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);
            } finally {dbg.exitSubRule(4);}

            dbg.location(27,101);
            pushFollow(FOLLOW_protocolDef_in_description171);
            protocolDef5=protocolDef();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_protocolDef.add(protocolDef5.getTree());


            // AST REWRITE
            // elements: protocolDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 27:113: -> protocolDef
            {
                dbg.location(27,116);
                adaptor.addChild(root_0, stream_protocolDef.nextTree());

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(27, 127);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "description");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "description"

    public static class importProtocolStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importProtocolStatement"
    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:29:1: importProtocolStatement : 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';' ;
    public final MonitorParser.importProtocolStatement_return importProtocolStatement() throws RecognitionException {
        MonitorParser.importProtocolStatement_return retval = new MonitorParser.importProtocolStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal6=null;
        Token string_literal7=null;
        Token char_literal9=null;
        Token char_literal11=null;
        MonitorParser.importProtocolDef_return importProtocolDef8 = null;

        MonitorParser.importProtocolDef_return importProtocolDef10 = null;


        Object string_literal6_tree=null;
        Object string_literal7_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "importProtocolStatement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(29, 1);

        try {
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:29:24: ( 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';' )
            dbg.enterAlt(1);

            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:29:26: 'import' 'protocol' importProtocolDef ( ',' importProtocolDef )* ';'
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(29,26);
            string_literal6=(Token)match(input,23,FOLLOW_23_in_importProtocolStatement182); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal6_tree = (Object)adaptor.create(string_literal6);
            adaptor.addChild(root_0, string_literal6_tree);
            }
            dbg.location(29,35);
            string_literal7=(Token)match(input,24,FOLLOW_24_in_importProtocolStatement184); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal7_tree = (Object)adaptor.create(string_literal7);
            adaptor.addChild(root_0, string_literal7_tree);
            }
            dbg.location(29,46);
            pushFollow(FOLLOW_importProtocolDef_in_importProtocolStatement186);
            importProtocolDef8=importProtocolDef();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, importProtocolDef8.getTree());
            dbg.location(29,64);
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:29:64: ( ',' importProtocolDef )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==25) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:29:66: ',' importProtocolDef
            	    {
            	    dbg.location(29,69);
            	    char_literal9=(Token)match(input,25,FOLLOW_25_in_importProtocolStatement190); if (state.failed) return retval;
            	    dbg.location(29,71);
            	    pushFollow(FOLLOW_importProtocolDef_in_importProtocolStatement193);
            	    importProtocolDef10=importProtocolDef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, importProtocolDef10.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}

            dbg.location(29,95);
            char_literal11=(Token)match(input,26,FOLLOW_26_in_importProtocolStatement198); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(29, 97);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "importProtocolStatement");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "importProtocolStatement"

    public static class importProtocolDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importProtocolDef"
    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:31:1: importProtocolDef : ID 'from' StringLiteral ;
    public final MonitorParser.importProtocolDef_return importProtocolDef() throws RecognitionException {
        MonitorParser.importProtocolDef_return retval = new MonitorParser.importProtocolDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID12=null;
        Token string_literal13=null;
        Token StringLiteral14=null;

        Object ID12_tree=null;
        Object string_literal13_tree=null;
        Object StringLiteral14_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "importProtocolDef");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(31, 1);

        try {
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:31:18: ( ID 'from' StringLiteral )
            dbg.enterAlt(1);

            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:31:20: ID 'from' StringLiteral
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(31,20);
            ID12=(Token)match(input,ID,FOLLOW_ID_in_importProtocolDef207); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID12_tree = (Object)adaptor.create(ID12);
            adaptor.addChild(root_0, ID12_tree);
            }
            dbg.location(31,29);
            string_literal13=(Token)match(input,27,FOLLOW_27_in_importProtocolDef209); if (state.failed) return retval;
            dbg.location(31,31);
            StringLiteral14=(Token)match(input,StringLiteral,FOLLOW_StringLiteral_in_importProtocolDef212); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            StringLiteral14_tree = (Object)adaptor.create(StringLiteral14);
            adaptor.addChild(root_0, StringLiteral14_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(31, 44);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "importProtocolDef");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "importProtocolDef"

    public static class importTypeStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "importTypeStatement"
    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:1: importTypeStatement : 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';' ;
    public final MonitorParser.importTypeStatement_return importTypeStatement() throws RecognitionException {
        MonitorParser.importTypeStatement_return retval = new MonitorParser.importTypeStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal15=null;
        Token char_literal18=null;
        Token string_literal20=null;
        Token StringLiteral21=null;
        Token char_literal22=null;
        MonitorParser.simpleName_return simpleName16 = null;

        MonitorParser.importTypeDef_return importTypeDef17 = null;

        MonitorParser.importTypeDef_return importTypeDef19 = null;


        Object string_literal15_tree=null;
        Object char_literal18_tree=null;
        Object string_literal20_tree=null;
        Object StringLiteral21_tree=null;
        Object char_literal22_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "importTypeStatement");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(33, 1);

        try {
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:20: ( 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';' )
            dbg.enterAlt(1);

            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:22: 'import' ( simpleName )? importTypeDef ( ',' importTypeDef )* ( 'from' StringLiteral )? ';'
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(33,22);
            string_literal15=(Token)match(input,23,FOLLOW_23_in_importTypeStatement225); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal15_tree = (Object)adaptor.create(string_literal15);
            adaptor.addChild(root_0, string_literal15_tree);
            }
            dbg.location(33,31);
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:31: ( simpleName )?
            int alt6=2;
            try { dbg.enterSubRule(6);
            try { dbg.enterDecision(6);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID) ) {
                int LA6_1 = input.LA(2);

                if ( ((LA6_1>=ID && LA6_1<=StringLiteral)) ) {
                    alt6=1;
                }
            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:33: simpleName
                    {
                    dbg.location(33,33);
                    pushFollow(FOLLOW_simpleName_in_importTypeStatement229);
                    simpleName16=simpleName();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleName16.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(6);}

            dbg.location(33,47);
            pushFollow(FOLLOW_importTypeDef_in_importTypeStatement234);
            importTypeDef17=importTypeDef();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, importTypeDef17.getTree());
            dbg.location(33,61);
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:61: ( ',' importTypeDef )*
            try { dbg.enterSubRule(7);

            loop7:
            do {
                int alt7=2;
                try { dbg.enterDecision(7);

                int LA7_0 = input.LA(1);

                if ( (LA7_0==25) ) {
                    alt7=1;
                }


                } finally {dbg.exitDecision(7);}

                switch (alt7) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:63: ',' importTypeDef
            	    {
            	    dbg.location(33,66);
            	    char_literal18=(Token)match(input,25,FOLLOW_25_in_importTypeStatement238); if (state.failed) return retval;
            	    dbg.location(33,68);
            	    pushFollow(FOLLOW_importTypeDef_in_importTypeStatement241);
            	    importTypeDef19=importTypeDef();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, importTypeDef19.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);
            } finally {dbg.exitSubRule(7);}

            dbg.location(33,85);
            // /homes/rn710/workspace/MonitorPrototype/src/Monitor.g:33:85: ( 'from' StringLiteral )?
            int alt8=2;
            try { dbg.enterSubRule(8);
            try { dbg.enterDecision(8);

            int LA8_0 = input.LA(1);

            if ( (LA8_0==27) ) {
                alt8=1;
            }
            } finally {dbg.exitDecision(8);}

            switch (alt8) {
                case 1 :
                    dbg.enterAlt(1);
